--- a/config/levante/catalog/MSWEP/3hourly.yaml
+++ b/config/levante/catalog/MSWEP/3hourly.yaml
@@ -3,8 +3,8 @@ plugins:
     - module: intake_xarray
 
 sources:
-  3hourly:
-    description: 3hourly MSWEP_V280 data from 1979 till 2020
+  json:
+    description: 3hourly MSWEP_V280 data
     driver: zarr
     args:
       consolidated: False
@@ -52,7 +52,7 @@ sources:
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2019.json
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2020.json
 
-  y1979:
+  json_1979:
     description: 3hourly MSWEP_V280 data for 1979
     driver: zarr
     args:
@@ -60,7 +60,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1979.json 
 
-  y1980:
+  json_1980:
     description: 3hourly MSWEP_V280 data for 1980
     driver: zarr
     args:
@@ -68,7 +68,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1980.json 
 
-  y1981:
+  json_1981:
     description: 3hourly MSWEP_V280 data for 1981
     driver: zarr
     args:
@@ -77,7 +77,7 @@ sources:
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1981.json 
 
 
-  y1982:
+  json_1982:
     description: 3hourly MSWEP_V280 data for 1982
     driver: zarr
     args:
@@ -85,7 +85,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1982.json 
 
-  y1983:
+  json_1983:
     description: 3hourly MSWEP_V280 data for 1983
     driver: zarr
     args:
@@ -93,7 +93,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1983.json 
 
-  y1984:
+  json_1984:
     description: 3hourly MSWEP_V280 data for 1984
     driver: zarr
     args:
@@ -101,7 +101,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1984.json 
 
-  y1985:
+  json_1985:
     description: 3hourly MSWEP_V280 data for 1985
     driver: zarr
     args:
@@ -109,7 +109,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1985.json 
 
-  y1986:
+  json_1986:
     description: 3hourly MSWEP_V280 data for 1986
     driver: zarr
     args:
@@ -118,7 +118,7 @@ sources:
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1986.json 
 
 
-  y1987:
+  json_1987:
     description: 3hourly MSWEP_V280 data for 1987
     driver: zarr
     args:
@@ -126,7 +126,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1987.json 
 
-  y1988:
+  json_1988:
     description: 3hourly MSWEP_V280 data for 1988
     driver: zarr
     args:
@@ -135,7 +135,7 @@ sources:
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1988.json 
 
 
-  y1989:
+  json_1989:
     description: 3hourly MSWEP_V280 data for 1989
     driver: zarr
     args:
@@ -144,7 +144,7 @@ sources:
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1989.json 
 
 
-  y1990:
+  json_1990:
     description: 3hourly MSWEP_V280 data for 1990
     driver: zarr
     args:
@@ -152,7 +152,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1990.json 
 
-  y1991:
+  json_1991:
     description: 3hourly MSWEP_V280 data for 1991
     driver: zarr
     args:
@@ -161,7 +161,7 @@ sources:
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1991.json 
 
 
-  y1992:
+  json_1992:
     description: 3hourly MSWEP_V280 data for 1992
     driver: zarr
     args:
@@ -169,7 +169,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1992.json
 
-  y1993:
+  json_1993:
     description: 3hourly MSWEP_V280 data for 1993
     driver: zarr
     args:
@@ -178,7 +178,7 @@ sources:
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1993.json  
 
   
-  y1994:
+  json_1994:
     description: 3hourly MSWEP_V280 data for 1994
     driver: zarr
     args:
@@ -186,7 +186,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1994.json 
 
-  y1995:
+  json_1995:
     description: 3hourly MSWEP_V280 data for 1995
     driver: zarr
     args:
@@ -195,7 +195,7 @@ sources:
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1995.json 
 
 
-  y1996:
+  json_1996:
     description: 3hourly MSWEP_V280 data for 1996
     driver: zarr
     args:
@@ -203,7 +203,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1996.json 
 
-  y1997:
+  json_1997:
     description: 3hourly MSWEP_V280 data for 1997
     driver: zarr
     args:
@@ -212,7 +212,7 @@ sources:
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1997.json 
 
 
-  y1998:
+  json_1998:
     description: 3hourly MSWEP_V280 data for 1998
     driver: zarr
     args:
@@ -220,7 +220,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1998.json 
 
-  y1999:
+  json_1999:
     description: 3hourly MSWEP_V280 data for 1999
     driver: zarr
     args:
@@ -228,7 +228,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/1999.json 
 
-  y2000:
+  json_2000:
     description: 3hourly MSWEP_V280 data for 2000
     driver: zarr
     args:
@@ -237,7 +237,7 @@ sources:
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2000.json 
 
 
-  y2001:
+  json_2001:
     description: 3hourly MSWEP_V280 data for 2001
     driver: zarr
     args:
@@ -245,7 +245,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2001.json 
 
-  y2002:
+  json_2002:
     description: 3hourly MSWEP_V280 data for 2002
     driver: zarr
     args:
@@ -253,7 +253,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2002.json 
 
-  y2003:
+  json_2003:
     description: 3hourly MSWEP_V280 data for 2003
     driver: zarr
     args:
@@ -261,7 +261,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2003.json 
 
-  y2004:
+  json_2004:
     description: 3hourly MSWEP_V280 data for 2004
     driver: zarr
     args:
@@ -269,7 +269,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2004.json 
 
-  y2005:
+  json_2005:
     description: 3hourly MSWEP_V280 data for 2005
     driver: zarr
     args:
@@ -278,7 +278,7 @@ sources:
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2005.json 
 
 
-  y2006:
+  json_2006:
     description: 3hourly MSWEP_V280 data for 2006
     driver: zarr
     args:
@@ -287,7 +287,7 @@ sources:
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2006.json 
 
 
-  y2007:
+  json_2007:
     description: 3hourly MSWEP_V280 data for 2007
     driver: zarr
     args:
@@ -296,7 +296,7 @@ sources:
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2007.json 
 
 
-  y2008:
+  json_2008:
     description: 3hourly MSWEP_V280 data for 2008
     driver: zarr
     args:
@@ -304,7 +304,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2008.json 
 
-  y2009:
+  json_2009:
     description: 3hourly MSWEP_V280 data for 2009
     driver: zarr
     args:
@@ -312,7 +312,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2009.json 
 
-  y2010:
+  json_2010:
     description: 3hourly MSWEP_V280 data for 2010
     driver: zarr
     args:
@@ -320,7 +320,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2010.json 
 
-  y2011:
+  json_2011:
     description: 3hourly MSWEP_V280 data for 2011
     driver: zarr
     args:
@@ -328,7 +328,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2011.json 
 
-  y2012:
+  json_2012:
     description: 3hourly MSWEP_V280 data for 2012
     driver: zarr
     args:
@@ -336,7 +336,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2012.json 
 
-  y2013:
+  json_2013:
     description: 3hourly MSWEP_V280 data for 2013
     driver: zarr
     args:
@@ -344,7 +344,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2013.json 
 
-  y2014:
+  json_2014:
     description: 3hourly MSWEP_V280 data for 2014
     driver: zarr
     args:
@@ -353,7 +353,7 @@ sources:
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2014.json 
 
 
-  y2015:
+  json_2015:
     description: 3hourly MSWEP_V280 data for 2015
     driver: zarr
     args:
@@ -362,7 +362,7 @@ sources:
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2015.json 
 
 
-  y2016:
+  json_2016:
     description: 3hourly MSWEP_V280 data for 2016
     driver: zarr
     args:
@@ -370,7 +370,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2016.json 
 
-  y2017:
+  json_2017:
     description: 3hourly MSWEP_V280 data for 2017
     driver: zarr
     args:
@@ -378,7 +378,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2017.json 
 
-  y2018:
+  json_2018:
     description: 3hourly MSWEP_V280 data for 2018
     driver: zarr
     args:
@@ -386,7 +386,7 @@ sources:
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2018.json 
 
-  y2019:
+  json_2019:
     description: 3hourly MSWEP_V280 data for 2019
     driver: zarr
     args:
@@ -395,7 +395,7 @@ sources:
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/3hourly/3hourlyGrouped/GroupedByYear/2019.json 
 
 
-  y2020:
+  json_2020:
     description: 3hourly MSWEP_V280 data for 2020
     driver: zarr
     args:
