--- a/config/machines/levante/regrid.yaml
+++ b/config/machines/levante/regrid.yaml
@@ -246,11 +246,11 @@ source_grids:
         space_coord: ["lon", "lat"]
 
   ERA5:
-    era5:
+    era5-dkrz:
       default:
         path: /work/bb1153/b382075/nextgems/grids/n320_unstructured.nc
         space_coord: ["values"]  
-    era5-aqua:
+    era5:
       default:
         path: /work/bb1153/b382076/ERA5/grids/r025_grid.nc
         space_coord: ["lon", "lat"]
