adding catalog entries

--- a/config/machines/levante/regrid.yaml
+++ b/config/machines/levante/regrid.yaml
@@ -46,7 +46,7 @@ source_grids:
   
     tco2559-ng5:
       ICMGG_atm2d:
-        path: /work/bm1344/AWI/nextGEMS_Cycle2_IFS/tcogrids//4km/tcogrids/tco2559_grid.nc
+        path: /work/bm1344/AWI/nextGEMS_Cycle2_IFS/tcogrids/4km/tcogrids/tco2559_grid.nc
         space_coord: ["value"]
       ICMU_atm2d:
         path: /work/bm1344/AWI/nextGEMS_Cycle2_IFS/tcogrids/4km/tcogrids/tco2559_grid.nc
@@ -63,6 +63,42 @@ source_grids:
       #   space_coord: ["lon", "lat"]
       # lra-r100-mon:
       #   space_coord: ["lon", "lat"]
+    tco2559-ng5-cycle3:
+      default: 
+        space_coord: ["lon", "lat"]
+      2D_1h_native:
+        path: /work/bm1235/ifs-grids/tco_grids/tco2559_grid.nc
+        space_coord: ["value"]
+      3D_1h6h_native:
+        path: /work/bm1235/ifs-grids/tco_grids/tco2559_grid.nc
+        space_coord: ["value"]
+      2D_monthly_native:
+        path: /work/bm1235/ifs-grids/tco_grids/tco2559_grid.nc
+        space_coord: ["value"]
+      3D_monthly_native:
+        path: /work/bm1235/ifs-grids/tco_grids/tco2559_grid.nc
+        space_coord: ["value"]
+      WAM_1h_native:
+        path: /work/bm1235/ifs-grids/tco_grids/tco1279_grid.nc
+        space_coord: ["value"]
+    tco1279-orca025-cycle3:
+      default: 
+        space_coord: ["lon", "lat"]
+      2D_1h_native:
+        path: /work/bm1235/ifs-grids/tco_grids/tco1279_grid.nc
+        space_coord: ["value"]
+      3D_1h6h_native:
+        path: /work/bm1235/ifs-grids/tco_grids/tco1279_grid.nc
+        space_coord: ["value"]
+      2D_monthly_native:
+        path: /work/bm1235/ifs-grids/tco_grids/tco1279_grid.nc
+        space_coord: ["value"]
+      3D_monthly_native:
+        path: /work/bm1235/ifs-grids/tco_grids/tco1279_grid.nc
+        space_coord: ["value"]
+      WAM_1h_native:
+        path: /work/bm1235/ifs-grids/tco_grids/tco1279_grid.nc
+        space_coord: ["value"]
   
     tco1279-orca025:
       ICMGG_atm2d: 
@@ -80,7 +116,6 @@ source_grids:
       #   space_coord: ["lon", "lat"]
       # lra-r100-mon:
       #   space_coord: ["lon", "lat"]
-
     test-tco2559:
       ICMGG_atm2d:
         path: /work/bm1344/AWI/nextGEMS_Cycle2_IFS/tcogrids/4km/tcogrids/tco2559_grid.nc
@@ -186,6 +221,52 @@ source_grids:
           - -setgrid,/work/bb1153/b382075/nextgems/grids/NG5_griddes_nodes_IFS.nc 
       default:  # default covers all simple cases where this can be computed automatically (eg LRA)
         space_coord: ["lon", "lat"]
+
+    tco2559-ng5-cycle3:
+      default:  # default covers all simple cases where this can be computed automatically (eg LRA)
+        space_coord: ["lon", "lat"]
+      # 2D_1h_native:
+      #   path: /work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc
+      #   space_coord: ["nod2"]
+      #   extra: 
+      #     - -setgrid,/work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc 
+      #     - -selname,cell_area
+      # 2D_daily_native:
+      #   path: /work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc
+      #   space_coord: ["nod2"]
+      #   extra: 
+      #     - -setgrid,/work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc 
+      #     - -selname,cell_area
+      # 2D_monthly_native:
+      #   path: /work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc
+      #   space_coord: ["nod2"]
+      #   extra: 
+      #     - -setgrid,/work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc 
+      #     - -selname,cell_area
+      # 3D_1h_native_zarr:
+      #   path: /work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc
+      #   space_coord: ["nod2"]
+      #   extra: 
+      #     - -setgrid,/work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc 
+      #     - -selname,cell_area
+      # 3D_3h_native:
+      #   path: /work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc
+      #   space_coord: ["nod2"]
+      #   extra: 
+      #     - -setgrid,/work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc 
+      #     - -selname,cell_area
+      # 3D_daily_native:
+      #   path: /work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc
+      #   space_coord: ["nod2"]
+      #   extra: 
+      #     - -setgrid,/work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc 
+      #     - -selname,cell_area
+      # 3D_daily_native_zarr:
+      #   path: /work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc
+      #   space_coord: ["nod2"]
+      #   extra: 
+      #     - -setgrid,/work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc 
+      #     - -selname,cell_area
 
     test-ng5:
       original_2d:
