--- a/config/machines/levante/catalog/FESOM/main.yaml
+++ b/config/machines/levante/catalog/FESOM/main.yaml
@@ -9,6 +9,11 @@ sources:
     driver: yaml_file_cat
     args:
         path: "{{CATALOG_DIR}}/tco2559-ng5.yaml"
+  tco2559-ng5-cycle3:
+    description: 5km experiment, coupuled with IFS
+    driver: yaml_file_cat
+    args:
+        path: "{{CATALOG_DIR}}/tco2559-ng5-cycle3.yaml"
   # test-ng5:
   #   description: 5km experiment, coupuled with IFS
   #   driver: yaml_file_cat
