--- a/config/machines/levante/catalog/MSWEP/monthly.yaml
+++ b/config/machines/levante/catalog/MSWEP/monthly.yaml
@@ -19,4 +19,14 @@ sources:
       consolidated: False
       urlpath: 
       - reference::/work/bb1153/b382267/Observations_Zarr/MSWEP_V280/Past/Monthly/MonthlyGrouped/1979_2020.json
+
+  netcdf:
+    description: monthly MSWEP_V280 data
+    driver: netcdf
+    args:
+      urlpath: '/scratch/b/b382267/MSWEP/test_zarr/monthly/monthly.nc'
+      chunks: {}
+      xarray_kwargs:
+        decode_times: True
+   
       
