mask and unmasked 2d regridding

--- a/config/machines/levante/regrid.yaml
+++ b/config/machines/levante/regrid.yaml
@@ -127,21 +127,23 @@ source_grids:
     ngc3026:
       default:
         path:
-          2d: /work/bb1153/b382075/nextgems/grids/healpix/icon_hpx{zoom}_atm_2d.nc
+          2d: /work/bb1153/b382075/nextgems/grids/healpix/icon_hpx{zoom}_atm_2d.nc   # this is the default 2d grid
+          2dm: /work/bb1153/b382075/nextgems/grids/healpix/icon_hpx{zoom}_oce_2d.nc  # this is an additional and optional 2d grid used if data are masked
           depth_full: /work/bb1153/b382075/nextgems/grids/healpix/icon_hpx{zoom}_oce_depth_full.nc
           depth_half: /work/bb1153/b382075/nextgems/grids/healpix/icon_hpx{zoom}_oce_depth_half.nc
+        masked:   # This is the attribute used to distinguish variables which should go into the masked category
+          component: ocean
         space_coord: ["cell"]
         vert_coord: ["depth_half", "depth_full"]
     ngc3028:
       default:
         path:
-          2d: /work/bb1153/b382075/nextgems/grids/healpix/icon_hpx{zoom}_atm_2d.nc
+          2d: /work/bb1153/b382075/nextgems/grids/healpix/icon_hpx{zoom}_atm_2d.nc   # this is the default 2d grid
+          2dm: /work/bb1153/b382075/nextgems/grids/healpix/icon_hpx{zoom}_oce_2d.nc  # this is an additional 2d grid used if data are masked
           depth_full: /work/bb1153/b382075/nextgems/grids/healpix/icon_hpx{zoom}_oce_depth_full.nc
           depth_half: /work/bb1153/b382075/nextgems/grids/healpix/icon_hpx{zoom}_oce_depth_half.nc
-          # level_full: /work/bb1153/b382075/nextgems/grids/healpix/icon_hpx{zoom}_atm_2d.nc
-          # level_half: /work/bb1153/b382075/nextgems/grids/healpix/icon_hpx{zoom}_atm_2d.nc
-          # soil_depth_energy_level: /work/bb1153/b382075/nextgems/grids/healpix/icon_hpx{zoom}_atm_2d.nc
-          # soil_depth_water_level: /work/bb1153/b382075/nextgems/grids/healpix/icon_hpx{zoom}_atm_2d.nc
+        masked:   # This is the attribute used to distinguish variables which should go into the masked category
+          component: ocean
         space_coord: ["cell"]
         vert_coord: ["depth_half", "depth_full"]
   
