create some entries in LRA catalog

--- a/config/machines/levante/catalog/IFS/tco1279-orca025.yaml
+++ b/config/machines/levante/catalog/IFS/tco1279-orca025.yaml
@@ -23,6 +23,7 @@ sources:
       urlpath: reference::/work/bm1235/a270046/cycle2-sync/tco1279-orca025/nemo_deep/ICMUAc2/json.dir/atm3d.json
   lra-r100-monthly:
     driver: netcdf
+    description: LRA data monthly at r100
     args:
       urlpath: /work/bb1153/b382076/LRAv3/IFS/tco1279-orca025/r100/monthly/*tco1279-orca025_r100_monthly_????.nc
       chunks: {}
