--- a/config/machines/levante/catalog/IFS/tco3999-ng5.yaml
+++ b/config/machines/levante/catalog/IFS/tco3999-ng5.yaml
@@ -35,7 +35,14 @@ sources:
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/lcc/netcdf/tco3999-ng5_pc.json
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/10u/netcdf/tco3999-ng5_pc.json
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/10v/netcdf/tco3999-ng5_pc.json
-
+  lra-r100-monthly:
+    driver: netcdf
+    description: LRA data monthly at r100
+    args:
+      urlpath: /work/bb1153/b382076/LRAv3/IFS/tco3999-ng5/r100/mon/*tco3999-ng5_r100_mon_????.nc
+      chunks: {}
+      xarray_kwargs:
+        decode_times: true
   # interpolated_np:
   #   driver: zarr
   #   args:
