--- a/config/machines/levante/catalog/FESOM/tco2559-ng5.yaml
+++ b/config/machines/levante/catalog/FESOM/tco2559-ng5.yaml
@@ -382,10 +382,11 @@ sources:
       - /work/bm1235/a270046/cycle2-sync/tco2559-ng5/12_01Dec-31Dec2020_fesom/w.fesom.2020.nc
     description: original 3d output
     driver: netcdf
-  lra-r100-mon:
+  lra-r100-monthly:
     driver: netcdf
+    description: LRA data monthly at r100
     args:
-      urlpath: /work/bb1153/b382076/LRAv2/FESOM/tco2559-ng5/r100/mon/*tco2559-ng5_r100_mon_????.nc
+      urlpath: /work/bb1153/b382076/LRAv3/FESOM/tco2559-ng5/r100/mon/*tco2559-ng5_r100_mon_????.nc
       chunks: {}
       xarray_kwargs:
         decode_times: true
