--- a/config/machines/levante/catalog/ICON/ngc3026.yaml
+++ b/config/machines/levante/catalog/ICON/ngc3026.yaml
@@ -37,3 +37,11 @@ sources:
       consolidated: true
       urlpath: /work/bm1235/k203123/NextGEMS_Cycle3.git/experiments/ngc3026/outdata/ngc3026_P1D_{{ zoom }}.zarr
     driver: zarr
+  lra-r100-monthly:
+    driver: netcdf
+    description: LRA data monthly at r100
+    args:
+      urlpath: /work/bb1153/b382076/LRAv3/ICON/ngc3026/r100/monthly/*ngc3026_r100_monthly_????.nc
+      chunks: {}
+      xarray_kwargs:
+        decode_times: true
