--- a/config/machines/levante/catalog/ICON/ngc2009.yaml
+++ b/config/machines/levante/catalog/ICON/ngc2009.yaml
@@ -46,12 +46,11 @@ sources:
           simulation_id: ngc2009
           frequency: 30minute
           time_reduction: inst
-
-  lra-r100-mon:
+  lra-r100-monthly:
     driver: netcdf
-    description: LRA daily data 1x1 deg regular grid
+    description: LRA data monthly at r100
     args:
-      urlpath: /work/bb1153/b382076/LRAv2/ICON/ngc2009/r100/mon/*ngc2009_r100_mon_????.nc
+      urlpath: /work/bb1153/b382076/LRAv3/ICON/ngc2009/r100/monthly/*ngc2009_r100_monthly_????.nc
       chunks: {}
       xarray_kwargs:
         decode_times: true
