--- a/config/machines/levante/regrid.yaml
+++ b/config/machines/levante/regrid.yaml
@@ -39,10 +39,7 @@ source_grids:
         space_coord: ["lon", "lat"]
       default:  # default covers all simple cases where this can be computed automatically
         space_coord: ["lon", "lat"]
-      # lra-r100-day:
-      #   space_coord: ["lon", "lat"]
-      # lra-r100-mon:
-      #   space_coord: ["lon", "lat"]
+
   
     tco2559-ng5:
       ICMGG_atm2d:
@@ -59,10 +56,7 @@ source_grids:
         space_coord: ["lon", "lat"]
       default:  # # default covers all simple cases where this can be computed automatically
         space_coord: ["lon", "lat"]
-      # lra-r100-day:
-      #   space_coord: ["lon", "lat"]
-      # lra-r100-mon:
-      #   space_coord: ["lon", "lat"]
+
   
     tco1279-orca025:
       ICMGG_atm2d: 
@@ -76,10 +70,6 @@ source_grids:
         space_coord: ["value"]
       default:  # # default covers all simple cases where this can be computed automatically
         space_coord: ["lon", "lat"]
-      # lra-r100-day:
-      #   space_coord: ["lon", "lat"]
-      # lra-r100-mon:
-      #   space_coord: ["lon", "lat"]
 
     test-tco2559:
       ICMGG_atm2d:
@@ -119,18 +109,18 @@ source_grids:
         space_coord: ["ncells"]
       default:  # default covers all simple cases where this can be computed automatically
         space_coord: ["lon", "lat"]
-      # lra-r100-mon: 
-      #   space_coord: ["lon", "lat"]
-      # lra-r100-day: 
-      #   space_coord: ["lon", "lat"]
     ngc3026:
       default:
         path: '/work/bb1153/b382076/grids/healpix_grids/icon_hpx{zoom}.nc'
         space_coord: ["cell"]
+      lra-r100-monthly: 
+        space_coord: ["lon", "lat"]
     ngc3028:
       default:
         path: '/work/bb1153/b382076/grids/healpix_grids/icon_hpx{zoom}.nc'
         space_coord: ["cell"]
+      lra-r100-monthly: 
+        space_coord: ["lon", "lat"]
   
   FESOM:
     tco3999-ng5:  
